--- a/.config/hypr/UserConfigs/UserDecorations.conf
+++ b/.config/hypr/UserConfigs/UserDecorations.conf
@@ -27,12 +27,14 @@ decoration {
   dim_inactive = false
   dim_strength = -0.1
   dim_special = 0.8
+  
+  shadow {
+  enabled = true
 
-  drop_shadow = true
-  shadow_range = 11
-  shadow_render_power = 0
-  col.shadow_inactive = $color2
-
+  range = 11
+  render_power = 0
+  color_inactive = $color2
+}
   blur {
   	enabled = false
   	size = 6
