--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1B1B1B)
-$foreground = rgb(F6E0EF)
-$color0 = rgb(424142)
-$color1 = rgb(151416)
-$color2 = rgb(151416)
-$color3 = rgb(374559)
-$color4 = rgb(624259)
-$color5 = rgb(62788D)
-$color6 = rgb(AC7D9E)
-$color7 = rgb(EACBE0)
-$color8 = rgb(A38E9D)
-$color9 = rgb(1C1A1D)
-$color10 = rgb(1C1A1D)
-$color11 = rgb(4A5C77)
-$color12 = rgb(835877)
-$color13 = rgb(83A0BC)
-$color14 = rgb(E5A7D2)
-$color15 = rgb(EACBE0)
+$background = rgb(FFFEFF)
+$foreground = rgb(242B38)
+$color0 = rgb(FFFEFF)
+$color1 = rgb(96868A)
+$color2 = rgb(7098B3)
+$color3 = rgb(72707D)
+$color4 = rgb(645B5C)
+$color5 = rgb(434C62)
+$color6 = rgb(3C475E)
+$color7 = rgb(242B38)
+$color8 = rgb(9E8F92)
+$color9 = rgb(C8B2B8)
+$color10 = rgb(96CBEE)
+$color11 = rgb(9896A7)
+$color12 = rgb(85797B)
+$color13 = rgb(596682)
+$color14 = rgb(505F7D)
+$color15 = rgb(0C0E13)
