--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFEFF)
-$foreground = rgb(242B38)
-$color0 = rgb(FFFEFF)
-$color1 = rgb(96868A)
-$color2 = rgb(7098B3)
-$color3 = rgb(72707D)
-$color4 = rgb(645B5C)
-$color5 = rgb(434C62)
-$color6 = rgb(3C475E)
-$color7 = rgb(242B38)
-$color8 = rgb(9E8F92)
-$color9 = rgb(C8B2B8)
-$color10 = rgb(96CBEE)
-$color11 = rgb(9896A7)
-$color12 = rgb(85797B)
-$color13 = rgb(596682)
-$color14 = rgb(505F7D)
-$color15 = rgb(0C0E13)
+$background = rgb(FFFEFD)
+$foreground = rgb(161E25)
+$color0 = rgb(FFFEFD)
+$color1 = rgb(496684)
+$color2 = rgb(5C7997)
+$color3 = rgb(756758)
+$color4 = rgb(13548F)
+$color5 = rgb(25323E)
+$color6 = rgb(25323E)
+$color7 = rgb(161E25)
+$color8 = rgb(958B86)
+$color9 = rgb(6288B0)
+$color10 = rgb(7BA2C9)
+$color11 = rgb(9C8975)
+$color12 = rgb(1970BF)
+$color13 = rgb(314253)
+$color14 = rgb(314253)
+$color15 = rgb(070A0C)
