--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFEFD)
-$foreground = rgb(161E25)
-$color0 = rgb(FFFEFD)
-$color1 = rgb(496684)
-$color2 = rgb(5C7997)
-$color3 = rgb(756758)
-$color4 = rgb(13548F)
-$color5 = rgb(25323E)
-$color6 = rgb(25323E)
-$color7 = rgb(161E25)
-$color8 = rgb(958B86)
-$color9 = rgb(6288B0)
-$color10 = rgb(7BA2C9)
-$color11 = rgb(9C8975)
-$color12 = rgb(1970BF)
-$color13 = rgb(314253)
-$color14 = rgb(314253)
-$color15 = rgb(070A0C)
+$background = rgb(FFFFFF)
+$foreground = rgb(0F1013)
+$color0 = rgb(FFFFFF)
+$color1 = rgb(42402D)
+$color2 = rgb(1A1A20)
+$color3 = rgb(191A1F)
+$color4 = rgb(191A1F)
+$color5 = rgb(191A1F)
+$color6 = rgb(191A1F)
+$color7 = rgb(0F1013)
+$color8 = rgb(7F7F7F)
+$color9 = rgb(57563B)
+$color10 = rgb(22232A)
+$color11 = rgb(22232A)
+$color12 = rgb(22232A)
+$color13 = rgb(22232A)
+$color14 = rgb(22232A)
+$color15 = rgb(050506)
