brackets break idk

--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFFFF)
-$foreground = rgb(0F1013)
-$color0 = rgb(FFFFFF)
-$color1 = rgb(42402D)
-$color2 = rgb(1A1A20)
-$color3 = rgb(191A1F)
-$color4 = rgb(191A1F)
-$color5 = rgb(191A1F)
-$color6 = rgb(191A1F)
-$color7 = rgb(0F1013)
-$color8 = rgb(7F7F7F)
-$color9 = rgb(57563B)
-$color10 = rgb(22232A)
-$color11 = rgb(22232A)
-$color12 = rgb(22232A)
-$color13 = rgb(22232A)
-$color14 = rgb(22232A)
-$color15 = rgb(050506)
+$background = rgb(FFFBFF)
+$foreground = rgb(181118)
+$color0 = rgb(FFFBFF)
+$color1 = rgb(8D6082)
+$color2 = rgb(6D4A61)
+$color3 = rgb(5E4D62)
+$color4 = rgb(5E4D62)
+$color5 = rgb(5E4C62)
+$color6 = rgb(291D28)
+$color7 = rgb(181118)
+$color8 = rgb(956B8B)
+$color9 = rgb(BC80AE)
+$color10 = rgb(926282)
+$color11 = rgb(7E6683)
+$color12 = rgb(7E6683)
+$color13 = rgb(7E6683)
+$color14 = rgb(362636)
+$color15 = rgb(080608)
