--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -22,15 +22,15 @@ general {
 
 # Warn
 listener {
-    timeout = 540                     # 9 min
+    timeout = 10                     # 9 min
     on-timeout = notify-send -i $iDIR " You are idle!" # command to run when timeout has passed
     on-resume = notify-send -i $iDIR " Oh! you're Back" " Hello !!!"  # command to run when activity is detected after timeout has fired.
 }
 
 # Screenlock
 listener {
-    timeout = 600                     # 10 min
-    on-timeout = loginctl lock-session # command to run when timeout has passed
+    timeout = 15                     # 10 min
+    on-timeout = swaylock # command to run when timeout has passed
     #on-resume = notify-send -i $iDIR " System Unlocked!"  # command to run when activity is detected after timeout has fired.
 }
 
