--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFBFF)
-$foreground = rgb(181118)
-$color0 = rgb(FFFBFF)
-$color1 = rgb(8D6082)
-$color2 = rgb(6D4A61)
-$color3 = rgb(5E4D62)
-$color4 = rgb(5E4D62)
-$color5 = rgb(5E4C62)
-$color6 = rgb(291D28)
-$color7 = rgb(181118)
-$color8 = rgb(956B8B)
-$color9 = rgb(BC80AE)
-$color10 = rgb(926282)
-$color11 = rgb(7E6683)
-$color12 = rgb(7E6683)
-$color13 = rgb(7E6683)
-$color14 = rgb(362636)
-$color15 = rgb(080608)
+$background = rgb(F2F8FA)
+$foreground = rgb(131D23)
+$color0 = rgb(FAFFFF)
+$color1 = rgb(556C72)
+$color2 = rgb(647A80)
+$color3 = rgb(555246)
+$color4 = rgb(40535B)
+$color5 = rgb(20313A)
+$color6 = rgb(20313A)
+$color7 = rgb(131D23)
+$color8 = rgb(61767C)
+$color9 = rgb(719098)
+$color10 = rgb(85A3AB)
+$color11 = rgb(716E5D)
+$color12 = rgb(556E79)
+$color13 = rgb(2B414D)
+$color14 = rgb(2B414D)
+$color15 = rgb(060A0C)
