--- a/.config/hypr/UserConfigs/UserDecorations.conf
+++ b/.config/hypr/UserConfigs/UserDecorations.conf
@@ -9,12 +9,12 @@
 source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
 
 general {
-  border_size = 0
+  border_size = 3
   gaps_in = -5
   gaps_out = -2
   
-  col.active_border = $color12 
-  col.inactive_border = $color10
+  col.active_border = rgb(ffffff) 
+  col.inactive_border = $color1
 }
 
 decoration {
@@ -33,7 +33,7 @@ decoration {
 
   range = 11
   render_power = 0
-  color_inactive = $color2
+  color_inactive = $color4
 }
   blur {
   	enabled = false
