--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(F2F8FA)
-$foreground = rgb(131D23)
-$color0 = rgb(FAFFFF)
-$color1 = rgb(556C72)
-$color2 = rgb(647A80)
-$color3 = rgb(555246)
-$color4 = rgb(40535B)
-$color5 = rgb(20313A)
-$color6 = rgb(20313A)
-$color7 = rgb(131D23)
-$color8 = rgb(61767C)
-$color9 = rgb(719098)
-$color10 = rgb(85A3AB)
-$color11 = rgb(716E5D)
-$color12 = rgb(556E79)
-$color13 = rgb(2B414D)
-$color14 = rgb(2B414D)
-$color15 = rgb(060A0C)
+$background = rgb(2A2436)
+$foreground = rgb(D9F1FC)
+$color0 = rgb(50495D)
+$color1 = rgb(18105E)
+$color2 = rgb(3336AB)
+$color3 = rgb(3438B0)
+$color4 = rgb(3438B0)
+$color5 = rgb(286FBC)
+$color6 = rgb(6DA1B9)
+$color7 = rgb(C0E2F3)
+$color8 = rgb(869EAA)
+$color9 = rgb(21167D)
+$color10 = rgb(4347E4)
+$color11 = rgb(464BEB)
+$color12 = rgb(464BEB)
+$color13 = rgb(3694FA)
+$color14 = rgb(91D6F7)
+$color15 = rgb(C0E2F3)
