--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(2A2436)
-$foreground = rgb(D9F1FC)
-$color0 = rgb(50495D)
-$color1 = rgb(18105E)
-$color2 = rgb(3336AB)
-$color3 = rgb(3438B0)
-$color4 = rgb(3438B0)
-$color5 = rgb(286FBC)
-$color6 = rgb(6DA1B9)
-$color7 = rgb(C0E2F3)
-$color8 = rgb(869EAA)
-$color9 = rgb(21167D)
-$color10 = rgb(4347E4)
-$color11 = rgb(464BEB)
-$color12 = rgb(464BEB)
-$color13 = rgb(3694FA)
-$color14 = rgb(91D6F7)
-$color15 = rgb(C0E2F3)
+$background = rgb(FFFEF2)
+$foreground = rgb(020A16)
+$color0 = rgb(FFFEF2)
+$color1 = rgb(A7895E)
+$color2 = rgb(A27771)
+$color3 = rgb(4A828A)
+$color4 = rgb(1A4D62)
+$color5 = rgb(031124)
+$color6 = rgb(031124)
+$color7 = rgb(020A16)
+$color8 = rgb(AE926A)
+$color9 = rgb(DEB77D)
+$color10 = rgb(D89E97)
+$color11 = rgb(63ADB8)
+$color12 = rgb(226682)
+$color13 = rgb(041730)
+$color14 = rgb(041730)
+$color15 = rgb(010307)
