--- a/.config/hypr/UserConfigs/UserDecorations.conf
+++ b/.config/hypr/UserConfigs/UserDecorations.conf
@@ -13,7 +13,7 @@ general {
   gaps_in = -3
   gaps_out = -2
   
-  col.active_border = rgb(ffffff) 
+  col.active_border = rgb(00ffe0) 
   col.inactive_border = $color1
 }
 
