--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFEF2)
-$foreground = rgb(020A16)
-$color0 = rgb(FFFEF2)
-$color1 = rgb(A7895E)
-$color2 = rgb(A27771)
-$color3 = rgb(4A828A)
-$color4 = rgb(1A4D62)
-$color5 = rgb(031124)
-$color6 = rgb(031124)
-$color7 = rgb(020A16)
-$color8 = rgb(AE926A)
-$color9 = rgb(DEB77D)
-$color10 = rgb(D89E97)
-$color11 = rgb(63ADB8)
-$color12 = rgb(226682)
-$color13 = rgb(041730)
-$color14 = rgb(041730)
-$color15 = rgb(010307)
+$background = rgb(18191B)
+$foreground = rgb(FCF2E5)
+$color0 = rgb(3E4042)
+$color1 = rgb(14181D)
+$color2 = rgb(463739)
+$color3 = rgb(785655)
+$color4 = rgb(4C6462)
+$color5 = rgb(7F5A58)
+$color6 = rgb(B8A388)
+$color7 = rgb(F2E4D2)
+$color8 = rgb(A99F93)
+$color9 = rgb(1B2026)
+$color10 = rgb(5D494B)
+$color11 = rgb(9F7271)
+$color12 = rgb(658582)
+$color13 = rgb(A97876)
+$color14 = rgb(F6D9B6)
+$color15 = rgb(F2E4D2)
