--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(18191B)
-$foreground = rgb(FCF2E5)
-$color0 = rgb(3E4042)
-$color1 = rgb(14181D)
-$color2 = rgb(463739)
-$color3 = rgb(785655)
-$color4 = rgb(4C6462)
-$color5 = rgb(7F5A58)
-$color6 = rgb(B8A388)
-$color7 = rgb(F2E4D2)
-$color8 = rgb(A99F93)
-$color9 = rgb(1B2026)
-$color10 = rgb(5D494B)
-$color11 = rgb(9F7271)
-$color12 = rgb(658582)
-$color13 = rgb(A97876)
-$color14 = rgb(F6D9B6)
-$color15 = rgb(F2E4D2)
+$background = rgb(FFFEFF)
+$foreground = rgb(242B38)
+$color0 = rgb(FFFEFF)
+$color1 = rgb(96868A)
+$color2 = rgb(7098B3)
+$color3 = rgb(72707D)
+$color4 = rgb(645B5C)
+$color5 = rgb(434C62)
+$color6 = rgb(3C475E)
+$color7 = rgb(242B38)
+$color8 = rgb(9E8F92)
+$color9 = rgb(C8B2B8)
+$color10 = rgb(96CBEE)
+$color11 = rgb(9896A7)
+$color12 = rgb(85797B)
+$color13 = rgb(596682)
+$color14 = rgb(505F7D)
+$color15 = rgb(0C0E13)
