--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(FFFEFF)
-$foreground = rgb(242B38)
-$color0 = rgb(FFFEFF)
-$color1 = rgb(96868A)
-$color2 = rgb(7098B3)
-$color3 = rgb(72707D)
-$color4 = rgb(645B5C)
-$color5 = rgb(434C62)
-$color6 = rgb(3C475E)
-$color7 = rgb(242B38)
-$color8 = rgb(9E8F92)
-$color9 = rgb(C8B2B8)
-$color10 = rgb(96CBEE)
-$color11 = rgb(9896A7)
-$color12 = rgb(85797B)
-$color13 = rgb(596682)
-$color14 = rgb(505F7D)
-$color15 = rgb(0C0E13)
+$background = rgb(1F1F20)
+$foreground = rgb(FDF1CC)
+$color0 = rgb(454546)
+$color1 = rgb(17161C)
+$color2 = rgb(17161C)
+$color3 = rgb(432922)
+$color4 = rgb(214278)
+$color5 = rgb(8E4728)
+$color6 = rgb(BCA152)
+$color7 = rgb(F4E2AE)
+$color8 = rgb(AB9E7A)
+$color9 = rgb(1F1E25)
+$color10 = rgb(1F1E25)
+$color11 = rgb(59372E)
+$color12 = rgb(2C58A0)
+$color13 = rgb(BE5E35)
+$color14 = rgb(FAD66E)
+$color15 = rgb(F4E2AE)
