--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ source= $UserConfigs/01-UserDefaults.conf # settings for User defaults apps
 
 # nwg-displays
 source= $HOME/.config/hypr/monitors.conf
-source= $HOME/.config/hypr/workspaces.conf
-input {
-  kb_options= caps:swapescape
-}
+#source= $HOME/.config/hypr/workspaces.conf
+#  input {
+#    kb_options= caps:swapescape
+#  }
