--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1F1F20)
-$foreground = rgb(FDF1CC)
-$color0 = rgb(454546)
-$color1 = rgb(17161C)
-$color2 = rgb(17161C)
-$color3 = rgb(432922)
-$color4 = rgb(214278)
-$color5 = rgb(8E4728)
-$color6 = rgb(BCA152)
-$color7 = rgb(F4E2AE)
-$color8 = rgb(AB9E7A)
-$color9 = rgb(1F1E25)
-$color10 = rgb(1F1E25)
-$color11 = rgb(59372E)
-$color12 = rgb(2C58A0)
-$color13 = rgb(BE5E35)
-$color14 = rgb(FAD66E)
-$color15 = rgb(F4E2AE)
+$background = rgb(FFFDFD)
+$foreground = rgb(1B1924)
+$color0 = rgb(FFFDFD)
+$color1 = rgb(A88587)
+$color2 = rgb(B29195)
+$color3 = rgb(6D6B8E)
+$color4 = rgb(74616B)
+$color5 = rgb(483E4D)
+$color6 = rgb(2E293B)
+$color7 = rgb(1B1924)
+$color8 = rgb(AE8E90)
+$color9 = rgb(E0B2B4)
+$color10 = rgb(EDC2C6)
+$color11 = rgb(928FBD)
+$color12 = rgb(9B818E)
+$color13 = rgb(605367)
+$color14 = rgb(3D374F)
+$color15 = rgb(09080C)
